fix: replace dark mode hack with bootstrap's own dark mode

--- a/frontend/src/components/landing-layout/navigation/header-bar/header-nav-link.module.scss
+++ b/frontend/src/components/landing-layout/navigation/header-bar/header-nav-link.module.scss
@@ -9,5 +9,5 @@
 }
 
 .nav-link-active {
-  border-bottom-color: #fff;
+  border-bottom-color: var(--bs-primary);
 }
